<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>de.bund.bfr.knime</groupId>
	<artifactId>de.bund.bfr.knime.root</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<tycho.version>1.7.0</tycho.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<tycho.testArgLine></tycho.testArgLine>
		<jacoco-version>0.8.5</jacoco-version>
		<qualifier.prefix>K4-5-</qualifier.prefix>
	</properties>
	<modules>
		<!-- Plugins -->
		<module>de.bund.bfr.knime.openkrise</module>
		<module>de.bund.bfr.knime.openkrise.views</module>
		<module>de.bund.bfr.knime.gis</module>
		<module>de.bund.bfr.knime.gis.util</module>
		<module>de.bund.bfr.knime.gis.views</module>
		<module>de.bund.bfr.knime</module>
		<module>org.geotools</module>
		<module>edu.uci.ics.jung</module>
		<module>com.jgoodies</module>
		<module>com.thoughtworks.xstream</module>
		<module>de.bund.bfr.knime.openkrise.util</module>
		<module>quick.dbtable</module>
		<module>de.bund.bfr.knime.openkrise.db</module>
		<module>org.openstreetmap.josm</module>
		<module>org.apache.poi</module>
		<module>org.jooq</module>
		<module>de.bund.bfr.knime.openkrise.common</module>
		<module>de.bund.bfr.knime.openkrise.db.generated</module>
		<module>de.bund.bfr.knime.openkrise.xml</module>
		<module>de.nrw.verbraucherschutz.idv</module>
		<module>edu.umd.cs.findbugs.annotations</module>
		<module>de.bund.bfr.jung</module>
		<module>de.bund.bfr.knime.target</module>
		<module>de.bund.bfr.knime.chart</module>
		<module>de.bund.bfr.knime.network</module>
		<module>de.bund.bfr.knime.nls</module>
		<module>de.bund.bfr.math</module>
		<module>org.sbml.jsbml</module>
		<!-- disabled pmm
		<module>de.bund.bfr.knime.pmmlite.views</module>
		<module>de.bund.bfr.knime.pmmlite.util</module>
		<module>de.bund.bfr.knime.pmmlite.io</module>
		<module>de.bund.bfr.knime.pmmlite.core.generated</module>
		<module>de.bund.bfr.knime.pmmlite.core.types</module>
		<module>de.bund.bfr.knime.pmmlite.core</module>
		-->
		<!-- Test plugins <module>de.bund.bfr.knime.fsklab.metadata.model.test</module>
			<module>de.bund.bfr.knime.fsklab.nodes.test</module> <module>de.bund.bfr.knime.pmm.common.test</module> -->
		<!-- Test report <module>de.bund.bfr.knime.testreport</module> -->
		<!-- Others -->
                <!-- disabled testflows
		<module>de.bund.bfr.knime.testflows</module>
                -->
		<module>de.bund.bfr.knime.openkrise.feature</module>
		<module>de.bund.bfr.knime.gis.feature</module>
		<module>de.bund.bfr.knime.network.feature</module>
		<module>de.bund.bfr.knime.nls.feature</module>
		<!-- disabled pmm feature
		<module>de.bund.bfr.knime.pmmlite.feature</module>
		-->
		<module>de.bund.bfr.knime.update.p2</module>
                <!-- disabled Test_feature
		<module>Test_feature</module>
                -->

	</modules>



	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<!--<strictBinIncludes>false</strictBinIncludes>-->
					<format>'${qualifier.prefix}'yyyyMMddHHmm</format>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<id>package-feature</id>
						<configuration>
							<finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<target>
						<artifact>
							<groupId>de.bund.bfr.knime</groupId>
							<artifactId>KNIME_4_5</artifactId>
							<version>1.0.0-SNAPSHOT</version>
						</artifact>
					</target>
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
